--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
 	<div class="container" id="home">
 		<!-- nav -->
 		<nav class="py-4">
-        <div id="logo">
-			<h1> <a href="#index.html"><span class="fa fa-rebel" aria-hidden="true"></span> Activity</a></h1>
-		</div>
 
         <label for="drop" class="toggle">Menu</label>
         <input type="checkbox" id="drop" />
@@ -208,7 +205,7 @@
 <!-- //blog -->
 
 <!-- gallery -->
-<div class="gallery py-5 bg-ligh" id="projects">
+<div class="gallery py-5 bg-light" id="projects">
 	<div class="container py-3">
 		<h3 class="heading">Projects</h3>
 		<div class="row gallery_grid-more project-grids w3ls">
@@ -271,7 +268,7 @@
 			</div>
 			<div class="col-lg-7 mt-lg-0 mt-5 contact-right">
 				<h4 class="mb-4">Get In Touch</h4>
-				<form action="#" method="post">
+				<form action="https://formsubmit.co/imnajikp@gmail.com" method="POST">
 					<label><span class="fa mr-2 fa-user" aria-hidden="true"></span> Name</label>
 					<input type="text" name="Name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
 					<div class="clearfix"></div>
@@ -298,17 +295,15 @@
 			<div class="w3layouts-grid-left w3layouts-grid-right text-center">
 				<div class="social mb-4">
 					<ul>
-						<li><a href="#"><span class="fa mr-2 fa-facebook"></span></a></li>
-						<li><a href="#"><span class="fa mr-2 fa-twitter"></span></a></li>
-						<li><a href="#"><span class="fa mr-2 fa-google-plus"></span></a></li>
-						<li><a href="#"><span class="fa mr-2 fa-pinterest"></span></a></li>
-						<li><a href="#"><span class="fa mr-2 fa-vk"></span></a></li>
+						<li><a href="https://m.facebook.com/100007931027047/"><span class="fa mr-2 fa-facebook"></span></a></li>
+						<li><a href="https://twitter.com/___na__ji___?t=mfgDrv-rK-xLFryoe0qRwg&s=09"><span class="fa mr-2 fa-twitter"></span></a></li>
+						
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="copyright text-center">
-			<p>© 2018 Activity. All Rights Reserved | Design by <a href="http://w3layouts.com/"> W3layouts</a> </p>
+			<p>© 2022 Activity. All Rights Reserved | Design by <a href="http://w3layouts.com/"> Naji kp</a> </p>
 			<a href="#home" class="move-top scroll"><span class="fa fa-angle-up" aria-hidden="true"></span></a>
 		</div>
 	</div>
