--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 				<h4 class="mb-4">Get In Touch</h4>
 				<form action="https://formsubmit.co/imnajikp@gmail.com" method="POST">
 					<label><span class="fa mr-2 fa-user" aria-hidden="true"></span> Name</label>
-					<input type="text" name="Name" value="Name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Name';}" required="">
+					<input type="text" name="Name" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-envelope-open" aria-hidden="true"></span>Email</label>
-					<input type="email" name="Email" value="Email" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}" required="">
+					<input type="email" name="Email" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-phone" aria-hidden="true"></span>Phone</label>
-					<input type="text" name="Phone" value="Phone" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Phone';}" required="">
+					<input type="text" name="Phone" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Message</label>
-					<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
+					<textarea name="Message"  required=""></textarea>
 					<button type="submit" class="btn">Submit</button>
 				</form>
 			</div>
