--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 				<h4 class="mb-4">Get In Touch</h4>
 				<form action="https://formsubmit.co/imnajikp@gmail.com" method="POST">
 					<label><span class="fa mr-2 fa-user" aria-hidden="true"></span> Name</label>
-					<input type="text" name="Name" >
+					<input type="text" name="Name" placeholder="Name" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-envelope-open" aria-hidden="true"></span>Email</label>
-					<input type="email" name="Email" >
+					<input type="email" name="Email" placeholder="Email">
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-phone" aria-hidden="true"></span>Phone</label>
-					<input type="text" name="Phone" >
+					<input type="text" name="Phone" placeholder="Phone" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Message</label>
-					<textarea name="Message"  required=""></textarea>
+					<textarea name="Message"  required="" placeholder="Message"></textarea>
 					<button type="submit" class="btn">Submit</button>
 				</form>
 			</div>
