--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Activity Personal Category Flat Bootstrap Responsive Website Template | Home : W3layouts</title>
+<title>Naji kp</title>
 	
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -275,12 +275,12 @@
 					<label><span class="fa mr-2 fa-envelope-open" aria-hidden="true"></span>Email</label>
 					<input type="email" name="Email" placeholder="Email">
 					<div class="clearfix"></div>
-					<label><span class="fa mr-2 fa-phone" aria-hidden="true"></span>Phone</label>
-					<input type="text" name="Phone" placeholder="Phone" >
+					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Subject</label>
+					<input type="text" name="Subject" placeholder="Subject" >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Message</label>
 					<textarea name="Message"  required="" placeholder="Message"></textarea>
-					<button type="submit" class="btn">Submit</button>
+					<button type="submit" class="btn" onSubmit="btnbox()">Submit</button>
 				</form>
 			</div>
 		</div>
@@ -350,5 +350,10 @@
 		</div>
 	</div>
 <!-- //popup for gallery -->
+<script>
+	function btnbox(){
+		alert("Message successfully sent");
+	}
+</script>
 </body>
 </html>
