--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@
 				<h4 class="mb-4">Get In Touch</h4>
 				<form action="https://formsubmit.co/imnajikp@gmail.com" method="POST">
 					<label><span class="fa mr-2 fa-user" aria-hidden="true"></span> Name</label>
-					<input type="text" name="Name" placeholder="Name" >
+					<input type="text" name="Name" placeholder="Name" required >
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-envelope-open" aria-hidden="true"></span>Email</label>
-					<input type="email" name="Email" placeholder="Email">
+					<input type="email" name="Email" placeholder="Email" required>
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Subject</label>
-					<input type="text" name="Subject" placeholder="Subject" >
+					<input type="text" name="Subject" placeholder="Subject"  required>
 					<div class="clearfix"></div>
 					<label><span class="fa mr-2 fa-edit" aria-hidden="true"></span>Message</label>
-					<textarea name="Message"  required="" placeholder="Message"></textarea>
+					<textarea name="Message" placeholder="Message" required></textarea>
 					<button type="submit" class="btn" onSubmit="btnbox()">Submit</button>
 				</form>
 			</div>
